<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings">Settings</string>
	
	<string name="app_name">SUVAT Solver</string>
	<string name="calcuate">Calcuate</string>
	<string name="clear">Clear</string><string name="lacknumsentered">Please enter at least 3 values!</string>
	<string name="ok">OK</string>
	<string name="invalidVal">Please enter a valid value for </string>
	<string name="S">S</string>
	<string name="U">U</string>

	<string name="V">V</string>
	<string name="A">A</string>
	<string name="T">T</string>
	
<string name="madeBy">~made by confuded</string>
<string name="hintTxtS">distance (m)...</string>
<string name="hintTxtU">initial velocity (m/s)...</string>
<string name="hintTxtV">final velocity (m/s)...</string>
<string name="hintTxtA">acceleration (m/s^2)...</string>
<string name="hintTxtT">time (s)...</string>
<string name="toomanynums">Please enter ONLY 3 out of the 5 SUVAT variables!</string>

<string name="about">About</string>
<string name="about_description">This is my first app for Android and second Java app. The application and it's source code are licenced under GPLv2 and higher. The source code can be obtained at http://code.google.com/p/suvat-solver. For more info and bug reporting, please see the link...</string>
<string name="copy">Copy</string>
<string name="S:">S:</string>
<string name="U:">U:</string>
<string name="V:">V:</string>
<string name="A:">A:</string>
<string name="T:">T:</string>
<string name="goAPK.com">Chinese translation by http://goapk.com.</string>
</resources>
