<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="15sp">
		<TextView android:layout_width="wrap_content"
			android:textSize="24sp" android:layout_height="fill_parent"
			android:layout_gravity="left"
			android:text="@string/S:" android:gravity="right|center_vertical" android:layout_weight="0.1" android:layout_marginRight="5sp"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginRight="10sp" android:id="@+id/txtS" android:hint="@string/hintTxtS" android:inputType="number|numberSigned|numberDecimal"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:textSize="24sp" android:text="@string/U:" android:layout_height="fill_parent"
			android:layout_gravity="left"
			android:gravity="right|center_vertical" android:layout_weight="0.1" android:layout_marginRight="5sp"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginRight="10sp" android:id="@+id/txtU" android:hint="@string/hintTxtU" android:inputType="number|numberSigned|numberDecimal"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:textSize="24sp" android:text="@string/V:" android:layout_height="fill_parent"
			android:layout_gravity="left"
			android:gravity="right|center_vertical" android:layout_weight="0.1" android:layout_marginRight="5sp"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginRight="10sp" android:id="@+id/txtV" android:hint="@string/hintTxtV" android:inputType="number|numberSigned|numberDecimal"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:textSize="24sp" android:text="@string/A:" android:layout_height="fill_parent"
			android:layout_gravity="left"
			android:gravity="right|center_vertical" android:layout_weight="0.1" android:layout_marginRight="5sp"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginRight="10sp" android:id="@+id/txtA" android:hint="@string/hintTxtA" android:inputType="number|numberSigned|numberDecimal"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
			android:textSize="24sp" android:text="@string/T:" android:layout_height="fill_parent"
			android:layout_gravity="left"
			android:gravity="right|center_vertical" android:layout_weight="0.05" android:layout_marginRight="5sp"></TextView>
		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginRight="10sp" android:id="@+id/txtT" android:hint="@string/hintTxtT" android:inputType="number|numberSigned|numberDecimal"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout02"
		android:layout_height="wrap_content" android:layout_width="fill_parent">
		<Button android:layout_height="wrap_content" android:id="@+id/btnCalc"
			android:gravity="center" android:text="@string/calcuate"
			android:layout_width="fill_parent" android:layout_weight="1"></Button>
		<Button android:layout_height="wrap_content" android:id="@+id/btnClear"
			android:text="@string/clear" android:layout_width="fill_parent"
			android:layout_weight="1"></Button>
	</LinearLayout>
<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/madeBy" android:textSize="10sp"></TextView>
</LinearLayout>